[project]
name = "rss-reader"
version = "0.1.0"
description = "A CLI RSS reader with TUI interface"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.90.0",
    "feedparser>=6.0.0",
    "httpx>=0.28.0",
    "selectolax>=0.3.0",
    "rich>=13.0",
    "aiosqlite>=0.20.0",
    "pyperclip>=1.11.0",
    "markdownify>=1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rss_reader"]
